Add theme toggle functionality with light and dark mode support.

--- a/web/index.html
+++ b/web/index.html
@@ -3,12 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="color-scheme" content="light dark">
     <title>Wiser 搜索引擎</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="styles.css" rel="stylesheet">
 </head>
 <body>
+    <div class="theme-toggle" aria-label="主题切换">
+        <button type="button" data-mode="auto" class="active" title="跟随系统">自动</button>
+        <button type="button" data-mode="light" title="浅色模式">浅色</button>
+        <button type="button" data-mode="dark" title="深色模式">深色</button>
+    </div>
+
     <div class="container">
         <div class="logo">Wiser</div>
 
