Enhance import section accessibility and animation effects.

--- a/web/index.html
+++ b/web/index.html
@@ -30,10 +30,10 @@
 
         <div class="buttons-section">
             <button class="google-style-btn primary" id="search-btn-main">Wiser 搜索</button>
-            <button class="google-style-btn" id="toggle-import-btn">导入数据</button>
+            <button class="google-style-btn" id="toggle-import-btn" aria-controls="import-section" aria-expanded="false">导入数据</button>
         </div>
 
-        <div class="import-section hidden" id="import-section">
+        <div class="import-section" id="import-section" aria-hidden="true">
             <h3>导入数据</h3>
             <div class="drop-zone" id="drop-zone">
                 <p class="drop-zone-text">将文件拖到此处，或点击选择文件</p>
